<resources>
    <string name="app_name">Срок годности</string>
    <string name="name">Название</string>
    <string name="title_activity_adding">adding</string>
    <string name="adding_product">Добавление продукта</string>
    <string name="enterName">Введите название продукта</string>
    <string name="date_produced">Дата изготовления</string>
    <string name="okay_before">Годен до</string>
    <string name="chooseDateOfExpiry">Дата окончания</string>
    <string name="chooseDateOfExpiry2">срока годности</string>
    <string name="chooseBestBefore">Укажите срок хранения (в сутках)</string>
    <string name="best_before">Срок хранения</string>
    <string name="dney">суток</string>
    <string name="save">Сохранить</string>
    <string name="cancel">Отмена</string>
    <string name="notificationTime">17:00</string>
    <string name="overdue_products">Просроченные продукты</string>
    <string name="list_is_empty">Список пуст!</string>
    <string name="clear_list">Очистить список</string>
    <string name="settings">Настройки</string>
    <string name="rate_app">Оценить приложение</string>
    <string name="help">Справка</string>
    <string name="notice">Уведомления</string>
    <string name="manage_notifications">Управление напоминаниями</string>
    <string name="whats_new_title">Что нового?</string>
    <string name="sort">Сортировка</string>
    <string name="data_sort">Сортировка данных</string>
    <string name="last_overdue">Последние просроченные</string>
    <string name="rate_app_msg">Вы не хотели бы оценить приложение в Google Play?</string>
    <string name="rate">Оценить</string>
    <string name="no">Нет</string>
    <string name="today_is_the_last_day">Сегодня последний день!</string>
    <string name="please_fill_all_fields">Заполните все поля!</string>
    <string name="wrong_date">Неверная дата!</string>
    <string name="wrong_best_before">Неверный срок хранения! Разрешены натуральные числа, а также дроби с округлением до 0.5</string>
    <string name="product_is_expired">Товар просрочен!</string>
    <plurals name="numberOfDaysLeft">
        <item quantity="zero">Сегодня последний день!</item>
        <item quantity="one">Остался %d день</item>
        <item quantity="two">Осталось %d дня</item>
        <item quantity="few">Осталось %d дня</item>
        <item quantity="many">Осталось %d дней</item>
        <item quantity="other">Осталось %d дней</item>
    </plurals>
    <plurals name="calculatorFresh">
        <item quantity="zero">Сегодня последний день!</item>
        <item quantity="one">Продукт годен в течение %d дня</item>
        <item quantity="two">Продукт годен в течение %d дней</item>
        <item quantity="few">Продукт годен в течение %d дней</item>
        <item quantity="many">Продукт годен в течение %d дней</item>
        <item quantity="other">Продукт годен в течение %d дня</item>
    </plurals>
    <plurals name="calculatorSpoil">
        <item quantity="one">Продукт просрочен на %d день!</item>
        <item quantity="two">Продукт просрочен на %d дня!</item>
        <item quantity="few">Продукт просрочен на %d дня!</item>
        <item quantity="many">Продукт просрочен на %d дней!</item>
        <item quantity="other">Продукт просрочен на %d дней!</item>
    </plurals>
    <string name="best_before_expires">Срок годности истекает!</string>
    <string name="last_day">Последний день!</string>
    <string name="overdue">Просрочен!</string>
    <string name="sync">Синхронизация</string>
    <string name="signin">Войти</string>
    <string name="auth_via_google">Авторизоваться через Google аккаунт</string>
    <string name="make_backup">Сохранить данные на сервере</string>
    <string name="restore">Восстановить данные</string>
    <string name="backup_success">Бекап успешно создан</string>
    <string name="restore_success">Восстановление завершено</string>
    <string name="auth_failed">Не удалось авторизоваться</string>
    <string name="auth_success">Авторизация успешна</string>
    <string name="log_out">Выйти из аккаунта</string>
    <string name="internal_error_has_occured">Произошла внутренняя ошибка</string>
    <string name="error_has_occured_try_to_relogin">Произошла ошибка, попробуйте авторизоваться заново</string>
    <string name="backup_failed">Ошибка при создании бекапа</string>
    <string name="error_timeout">Превышено время ожидания ответа</string>
    <string name="data_not_found">Данные не найдены</string>
    <string name="help_add">Число справа означает количество оставшихся полных дней до конца срока. Увеличить фото продукта можно, нажав на него (не работает с фотографией-шаблоном).</string>
    <string name="help_add_with_last_day">Число справа означает количество оставшихся полных дней до конца срока (восклицательный знак - если сегодня последний день). Увеличить фото продукта можно, нажав на него (не работает с фотографией-шаблоном).</string>
    <string name="warning">Внимание!</string>
    <string name="do_you_want_to_overwite_existing">Вы хотите перезаписать существующие данные данными с сервера?</string>
    <string name="yes">Да</string>
    <string name="ok">OK</string>
    <string name="changing_product">Изменение продукта</string>
    <string name="quantity">Количество</string>
    <string name="sync_with_google">Синхронизация с Google</string>
    <string name="nothing_to_backup">Нет данных для бекапа!</string>
    <string name="sure_you_want_delete_all_products">Вы действительно хотите удалить все продукты из этой группы?</string>
    <string name="days_in_add_act">суток</string>
    <string name="months_in_add_act">месяцев</string>
    <string name="clear_user_dictionary">Очистить пользовательский словарь</string>
    <string name="sure_you_want_clear_user_dictionary">Вы действительно хотите удалить все запомненные названия добавленных продуктов?</string>
    <string name="product_has_been_deleted">Продукт удален</string>
    <string name="undo">Отмена</string>
    <string name="feedback">Обратная связь</string>
    <string name="later">Позже</string>
    <string name="wrong_quantity">Неверное количество!</string>
    <string name="all_products">Все продукты</string>
    <string name="add_group">Добавить группу</string>
    <string name="creating_group">Создание группы</string>
    <string name="field_is_empty">Поле пусто!</string>
    <string name="email_subject">Фидбек по приложению \"Срок годности\"</string>
    <string name="developer_email">rudnev.vanya@gmail.com</string>
    <string name="delete_group">Удалить группу</string>
    <string name="sure_you_want_to_delete_group_with_products">Вы действительно хотите удалить эту группу со всеми ее продуктами?</string>
    <string name="you_can_not_delete_group">Эту группу нельзя удалить</string>
    <string name="logo_description">Header for navigation drawer</string>
    <string name="group">Группа</string>
    <string name="group_with_this_name_already_exists">Группа с таким названием уже существует</string>
    <string name="create_group_in_spinner">Создать группу&#8230;</string>
    <string name="group_was_created">Группа создана</string>
    <string name="group_was_deleted">Группа удалена</string>
    <string name="group_was_cleared">Группа очищена</string>
    <string name="group_was_renamed">Группа переименована</string>
    <string name="example_product">Это пример продукта. Смахните его влево для удаления.</string>
    <string name="rename_group">Переименовать группу</string>
    <string name="enter_new_name">Введите новое название</string>
    <string name="product_has_been_saved">Продукт сохранен</string>
    <string name="do_you_want_to_make_backup">Сохранить данные на сервере?</string>
    <string name="sync_with_google_deprecated">Синхронизация (старый способ)</string>
    <string name="trash">Корзина</string>
    <string name="want_restore_this_product">Вы хотите восстановить этот продукт?</string>
    <string name="product_has_been_restored">Продукт восстановлен</string>
    <string name="dateFormat">DDMMYY</string>
    <string name="quantity_attribute">Атрибут Количество</string>
    <string name="interface_settings">Настройки отображения</string>
    <string name="date_produced_attribute">Атрибут Дата изготовления</string>
    <string name="date_produced_attribute_summary">Всегда указывать дату производства продукта</string>
    <string name="ability_to_divide_into_groups">Возможность разделять на группы</string>
    <string name="groups">Группы</string>
    <string name="error_parse_date">Ошибка при разборе введенной даты!</string>
    <string name="close">Закрыть</string>
    <string name="radiobuttons">Радиокнопки</string>
    <string name="remember_radiobuttons_state">Запоминать прошлое положение переключателей при добавлении продукта</string>
    <string name="clear_date_in_first_tap">Очищать поле ввода даты при первом нажатии</string>
    <string name="date_input">Ввод даты</string>
    <string name="whats_new_25">Дату можно вводить в формате DDMMYY или DDMMYYYY, либо воспользоваться виджетом календаря.</string>
    <string name="combine">Объединить</string>
    <string name="got_it">Принято</string>
    <string name="press_twice_to_exit">Нажмите еще раз для выхода</string>
    <string name="press_twice_to_close">Нажмите еще раз, чтобы закрыть</string>
    <string name="search">Поиск</string>
    <string name="find">Найти</string>
    <string name="file_operations">Файловые операции</string>
    <string name="do_you_want_to_overwrite_existing_from_server">Вы хотите перезаписать существующие данные данными с сервера?</string>
    <string name="do_you_want_to_overwrite_existing_from_file">Вы хотите перезаписать существующие данные данными из файла?</string>
    <string name="import_from_file">Импорт из файла</string>
    <string name="export_to_file">Экспорт в файл</string>
    <string name="nothing_to_export">Нет данных для экспорта</string>
    <string name="file_open_error">Ошибка открытия файла</string>
    <string name="choose_backup">Выберите резервную копию</string>
    <string name="import_success">Импорт завершен</string>
    <string name="data">Данные</string>
    <string name="_interface">Интерфейс</string>
    <string name="adding_products_parameters">Параметры добавления продуктов</string>
    <string name="other">Другое</string>
    <string name="done_thanks_for_buying">Готово! Спасибо за покупку!</string>
    <string name="pick_image_intent_text">Выберите опцию</string>
    <string name="product_image">Фото продукта</string>
    <string name="use_photo">Использовать фотографии</string>
    <string name="quantity_short">Кол-во</string>
    <string name="success">Успешно!</string>
    <string name="sure_you_want_remove_all_backups">Вы действительно хотите удалить ВСЕ резервные копии на сервере? Действие необратимо!</string>
    <string name="remove_all_copies">Удалить все резервные копии</string>
    <string name="expanded_image">Увеличенное изображение</string>
    <string name="file_name_was_saved_to" formatted="false">Файл %s был сохранен в %s</string>
    <string name="no_apps_found_try_to_install_explorer">Не найдено приложений для выбора файла. Попробуйте установить сторонний файловый проводник из Google Play</string>
    <string name="please_wait">Пожалуйста, подождите&#8230;</string>
    <string name="import_process">Подождите, идет импорт данных&#8230;</string>
    <string name="out_of_memory_try_use_less_photos">Недостаточно памяти для продолжения, попробуйте использовать меньше фотографий</string>
    <string name="file_name">Имя файла</string>
    <string name="default_file_name">Products</string>
    <string name="used_file_name_without_extension">Используемое имя файла без учета расширения</string>
    <string name="project_info">Данное приложение является open-source проектом и распространяется \"как есть\". Вы можете также принять участие в разработке приложения. Ссылка на исходный код:</string>
    <string name="project_url">https://github.com/madsunrise/BestBefore.git</string>
</resources>