<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

        <PreferenceScreen
            android:key="open_notifications"
            android:title="@string/notifications">
            <PreferenceCategory
                android:title="Первое напоминание"
                android:key="first_group">

                <SwitchPreference
                    android:key="last_day"
                    android:title="Включить"
                    android:defaultValue="true" />

                <com.vanniktech.vntnumberpickerpreference.VNTNumberPickerPreference
                    android:defaultValue="0"
                    android:key="days_in_first"
                    android:title="За сколько дней напомнить (0 - в последний)"
                    app:vnt_maxValue="365"
                    app:vnt_minValue="0"
                    android:dependency="last_day"/>

                <com.rv150.bestbefore.Preferences.TimePreference1
                    android:name="Default notification time"
                    android:dialogLayout="@layout/time_preference"
                    android:key="time_in_first"
                    android:dependency="last_day"
                    android:title="Время напоминания"/>
            </PreferenceCategory>




            <PreferenceCategory
                android:title="Второе напоминание"
                android:key="second_group">
                <SwitchPreference
                    android:key="day_before"
                    android:title="Включить"
                    android:defaultValue="false" />

                <com.vanniktech.vntnumberpickerpreference.VNTNumberPickerPreference
                    android:defaultValue="1"
                    android:key="days_in_second"
                    android:title="За сколько дней напомнить (0 - в последний)"
                    app:vnt_maxValue="365"
                    app:vnt_minValue="0"
                    android:dependency="day_before"/>

                <com.rv150.bestbefore.Preferences.TimePreference2
                    android:name="Default notification time"
                    android:dialogLayout="@layout/time_preference"
                    android:key="time_in_second"
                    android:dependency="day_before"
                    android:title="Время напоминания"/>
            </PreferenceCategory>



            <PreferenceCategory
                android:title="Третье напоминание"
                android:key="third_group">
                <SwitchPreference
                    android:key="three_days"
                    android:title="Включить"
                    android:defaultValue="false" />

                <com.vanniktech.vntnumberpickerpreference.VNTNumberPickerPreference
                    android:defaultValue="2"
                    android:key="days_in_third"
                    android:title="За сколько дней напомнить (0 - в последний)"
                    app:vnt_maxValue="365"
                    app:vnt_minValue="0"
                    android:dependency="three_days"/>

                <com.rv150.bestbefore.Preferences.TimePreference3
                    android:name="Default notification time"
                    android:dialogLayout="@layout/time_preference"
                    android:key="time_in_third"
                    android:dependency="three_days"
                    android:title="Время напоминания"/>
            </PreferenceCategory>

            <PreferenceCategory
                android:title="Четвертое напоминание"
                android:key="fourth_group">
                <SwitchPreference
                    android:key="four_days"
                    android:title="Включить"
                    android:defaultValue="false" />

                <com.vanniktech.vntnumberpickerpreference.VNTNumberPickerPreference
                    android:defaultValue="3"
                    android:key="days_in_fourth"
                    android:title="За сколько дней напомнить (0 - в последний)"
                    app:vnt_maxValue="365"
                    app:vnt_minValue="0"
                    android:dependency="four_days"/>

                <com.rv150.bestbefore.Preferences.TimePreference4
                    android:name="Default notification time"
                    android:dialogLayout="@layout/time_preference"
                    android:key="time_in_fourth"
                    android:dependency="four_days"
                    android:title="Время напоминания"/>
            </PreferenceCategory>


            <PreferenceCategory
                android:title="Пятое напоминание"
                android:key="fifth_group">
                <SwitchPreference
                    android:key="five_days"
                    android:title="Включить"
                    android:defaultValue="false" />

                <com.vanniktech.vntnumberpickerpreference.VNTNumberPickerPreference
                    android:defaultValue="4"
                    android:key="days_in_fifth"
                    android:title="За сколько дней напомнить (0 - в последний)"
                    app:vnt_maxValue="365"
                    app:vnt_minValue="0"
                    android:dependency="five_days"/>

                <com.rv150.bestbefore.Preferences.TimePreference5
                    android:name="Default notification time"
                    android:dialogLayout="@layout/time_preference"
                    android:key="time_in_fifth"
                    android:dependency="five_days"
                    android:title="Время напоминания"/>
            </PreferenceCategory>

        </PreferenceScreen>


    <PreferenceScreen
        android:key="interface_settings"
        android:title="@string/interface_settings">
        <CheckBoxPreference
            android:key="use_quantity"
            android:title="@string/quantity_attribute"
            android:defaultValue="true" />
        <CheckBoxPreference
            android:key="use_date_produced"
            android:title="@string/date_produced_attribute"
            android:summary="@string/date_produced_attribute_summary"
            android:defaultValue="true" />
        <CheckBoxPreference
        android:key="use_groups"
        android:title="@string/groups"
        android:summary="@string/ability_to_divide_into_groups"
        android:defaultValue="true" />

        <CheckBoxPreference
            android:key="remember_radiobuttons"
            android:title="@string/radiobuttons"
            android:summary="@string/remember_radiobuttons_state"
            android:defaultValue="true" />

        <CheckBoxPreference
            android:key="clear_date_field"
            android:title="@string/date_input"
            android:summary="@string/clear_date_in_first_tap"
            android:defaultValue="true" />


    </PreferenceScreen>



    <com.rv150.bestbefore.Preferences.ListPreferenceWithSummary
        android:entries="@array/sortOptions"
        android:entryValues="@array/sortValues"
        android:key="how_to_sort"
        android:title="@string/sort"
        android:defaultValue="SPOILED_TO_FRESH">
    </com.rv150.bestbefore.Preferences.ListPreferenceWithSummary>

    <CheckBoxPreference
        android:key="needShowOverdue"
        android:title="Предупреждение"
        android:summary="Показывать при запуске окно с недавно просроченными продуктами"
        android:defaultValue="true" />




    <Preference
        android:key="clear_dictionary"
        android:title="@string/clear_user_dictionary" />


    <PreferenceScreen
        android:key="sync"
        android:title="@string/sync_with_google"
        android:persistent="false">
        <Preference
            android:title="@string/signin"
            android:summary="@string/auth_via_google"
            android:key="auth" />
        <Preference
            android:enabled="false"
            android:title="@string/make_backup"
            android:key="backup" />
        <Preference
            android:title="@string/restore"
            android:key="restore_deprecated" />
    </PreferenceScreen>



</PreferenceScreen>